--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,5 @@
 @use './Pages/TeacherLout/teachLout';
 @use './Pages/Autorize/autorize';
 @use './Pages/FormShow/formshow';
-@use './Pages/CreateForm/createForm'
+@use './Pages/CreateForm/createForm';
+@use './Pages/Results/results';
