--- a/src/styles/Pages/Registration/_registration.sass
+++ b/src/styles/Pages/Registration/_registration.sass
@@ -9,44 +9,7 @@ main.registration-container
     height: 100dvh
     flex-direction: column
 
-    dialog.SuccessfulModal[open]
-        justify-self: center
-        align-self: center
-        justify-items: center
-        align-items: center
-        margin: auto
-        opacity: 1
-        border: none
-        background: none
-        color: black
-        outline: none
-        width: 300px
-        height: 85px
-        &::backdrop
-            backdrop-filter: blur(20px)
-
-        *
-            outline: none
-
-        p
-            font-size: x-large
-            color: white
-            font-family: 'Courier New', Courier, monospace
-            font-weight: 600
-            text-align: center
-            margin-bottom: 10px
-            height: 30px
-            animation: show .6s  
-        
-        button
-            &:hover
-                &, &::before, &::after
-                    transform: scale(1) 
-            width: 250px
-            opacity: 0
-            animation: show .6s  forwards
-            animation-delay: .1s
-
+    
     @keyframes show 
         from 
             opacity: 0
@@ -125,3 +88,47 @@ main.registration-container
             margin-top: 15px
             width:280px
 
+dialog.SuccessfulModal[open]
+        justify-self: center
+        align-self: center
+        justify-items: center
+        align-items: center
+        width: 50dvw
+        height: fit-content
+        padding: 10px
+        opacity: 1
+        border: none
+        background: none
+        color: black
+        outline: none
+        &::backdrop
+            backdrop-filter: blur(20px)
+
+        *
+            outline: none
+
+        a
+            display: block
+            font-family: 'Courier New', Courier, monospace
+            font-size: large
+            color: white
+            border-bottom: 2px dotted
+            margin-bottom: 10px
+            user-select: none
+        
+        label
+            width: 50%
+            font-size: xx-large
+            color: white
+            font-family: monospace
+            font-weight: 600
+            text-align: center
+            margin-bottom: 10px
+            height: 30px
+            animation: show .6s  
+        
+        button
+            margin-top: 5px
+            opacity: 0
+            animation: show .6s  forwards
+            animation-delay: .1s
