--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -564,46 +564,6 @@ main.registration-container {
   height: 100dvh;
   flex-direction: column;
 }
-main.registration-container dialog.SuccessfulModal[open] {
-  justify-self: center;
-  align-self: center;
-  justify-items: center;
-  align-items: center;
-  margin: auto;
-  opacity: 1;
-  border: none;
-  background: none;
-  color: black;
-  outline: none;
-  width: 300px;
-  height: 85px;
-}
-main.registration-container dialog.SuccessfulModal[open]::backdrop {
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-}
-main.registration-container dialog.SuccessfulModal[open] * {
-  outline: none;
-}
-main.registration-container dialog.SuccessfulModal[open] p {
-  font-size: x-large;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-weight: 600;
-  text-align: center;
-  margin-bottom: 10px;
-  height: 30px;
-  animation: show 0.6s;
-}
-main.registration-container dialog.SuccessfulModal[open] button {
-  width: 250px;
-  opacity: 0;
-  animation: show 0.6s forwards;
-  animation-delay: 0.1s;
-}
-main.registration-container dialog.SuccessfulModal[open] button:hover, main.registration-container dialog.SuccessfulModal[open] button:hover::before, main.registration-container dialog.SuccessfulModal[open] button:hover::after {
-  transform: scale(1);
-}
 @keyframes show {
   from {
     opacity: 0;
@@ -674,6 +634,57 @@ main.registration-container #registration-form fieldset div label {
 main.registration-container #registration-form button {
   margin-top: 15px;
   width: 280px;
+}
+
+dialog.SuccessfulModal[open] {
+  justify-self: center;
+  align-self: center;
+  justify-items: center;
+  align-items: center;
+  width: 50dvw;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px;
+  opacity: 1;
+  border: none;
+  background: none;
+  color: black;
+  outline: none;
+}
+dialog.SuccessfulModal[open]::backdrop {
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+}
+dialog.SuccessfulModal[open] * {
+  outline: none;
+}
+dialog.SuccessfulModal[open] a {
+  display: block;
+  font-family: "Courier New", Courier, monospace;
+  font-size: large;
+  color: white;
+  border-bottom: 2px dotted;
+  margin-bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+dialog.SuccessfulModal[open] label {
+  width: 50%;
+  font-size: xx-large;
+  color: white;
+  font-family: monospace;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 10px;
+  height: 30px;
+  animation: show 0.6s;
+}
+dialog.SuccessfulModal[open] button {
+  margin-top: 5px;
+  opacity: 0;
+  animation: show 0.6s forwards;
+  animation-delay: 0.1s;
 }
 
 main.studentnavigator__container {
@@ -925,14 +936,15 @@ main.showform__container form section > article > legend {
 main.showform__container form section > article fieldset {
   display: flex;
   flex-direction: column;
-  gap: 10px;
   outline: none;
   border: none;
   width: 90%;
+  gap: 10px;
 }
 main.showform__container form section > article fieldset article.answer__container {
   height: 40px;
   width: 100%;
+  position: relative;
 }
 main.showform__container form section > article fieldset article.answer__container label.answer__label {
   border: 2px black solid;
@@ -955,6 +967,16 @@ main.showform__container form section > article fieldset article.answer__contain
 main.showform__container form section > article fieldset article.answer__container label.answer__label:active {
   box-shadow: 1px 1px 0 #000;
   transform: translate(-1px, -1px);
+}
+main.showform__container form section > article fieldset article.answer__container input.answer__input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  left: 50%;
+  top: 50%;
+  color: transparent;
+  background: transparent;
+  z-index: -10;
 }
 main.showform__container form section > article fieldset article.answer__container input.answer__input:checked ~ label.answer__label {
   background-color: rgb(80, 251, 80);
