--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -881,6 +881,8 @@ main.showform__container form h4 {
   font-size: large;
   border-radius: 5px;
   padding: 7px;
+  max-width: 50dvw;
+  max-height: 90px;
   border: white 2px dashed;
   margin-bottom: 20px;
 }
@@ -888,6 +890,7 @@ main.showform__container form button {
   width: 175px;
 }
 main.showform__container form section {
+  padding-top: 5px;
   border-bottom: dashed white 2px;
   border-top: dashed white 2px;
   width: 650px;
@@ -917,11 +920,11 @@ main.showform__container form section > article {
   border: 2px black solid;
   box-shadow: 5px 5px 0 var(--main-color);
   transition: --main-color 0.4s 0.15s;
-  height: -moz-fit-content;
-  height: fit-content;
+  min-height: 180px;
   align-items: baseline;
   padding-left: 30px;
   margin-bottom: 10px;
+  gap: 5px;
 }
 main.showform__container form section > article > legend {
   margin-bottom: 40px;
@@ -933,22 +936,32 @@ main.showform__container form section > article > legend {
   font-size: xx-large;
   font-weight: 600;
 }
+main.showform__container form section > article legend.question__legend {
+  max-width: 100%;
+  font-size: x-large;
+  min-width: 50%;
+  margin-right: 20px;
+  width: auto;
+  max-height: 200px;
+  text-overflow: clip;
+  overflow-y: auto;
+}
 main.showform__container form section > article fieldset {
   display: flex;
   flex-direction: column;
   outline: none;
+  height: auto;
   border: none;
   width: 90%;
   gap: 10px;
 }
 main.showform__container form section > article fieldset article.answer__container {
-  height: 40px;
+  min-height: 40px;
   width: 100%;
   position: relative;
 }
 main.showform__container form section > article fieldset article.answer__container label.answer__label {
   border: 2px black solid;
-  height: 100%;
   width: 100%;
   text-align: center;
   align-content: center;
@@ -957,8 +970,11 @@ main.showform__container form section > article fieldset article.answer__contain
   border-radius: 15px;
   transition: all 0.3s, --main-color 0.4s 0.2s;
   color: black;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
+  font-family: monospace;
   font-weight: 600;
+  padding: 5px;
+  min-height: 40px;
 }
 main.showform__container form section > article fieldset article.answer__container label.answer__label:hover {
   box-shadow: 3px 3px 0 #000;
@@ -1388,7 +1404,7 @@ main.stats-container section.polls-stats article.poll-card div.poll-details tabl
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
-main.stats-container section.polls-stats article.poll-card div.poll-details table.results-table td:nth-last-child(1) {
+main.stats-container section.polls-stats article.poll-card div.poll-details table.results-table td:nth-last-child(1), main.stats-container section.polls-stats article.poll-card div.poll-details table.results-table th:nth-last-child(1) {
   border-right: none;
 }
 main.stats-container section.polls-stats article.poll-card div.poll-details table.results-table th {
