--- a/src/styles/Pages/Autorize/_autorize.scss
+++ b/src/styles/Pages/Autorize/_autorize.scss
@@ -10,6 +10,7 @@ main.auth-container {
     flex-direction: column;
 
     form#auth-form {
+        min-height: 510px;
         @include formbg;
 
         & > .pretty_input {
