global architecture update

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,4 @@
 @use './Pages/FormShow/formshow';
 @use './Pages/CreateForm/createForm';
 @use './Pages/Results/results';
+@use './Pages/errors/HTTP_403/http_403'
