--- a/src/styles/Components/UserProfile/_userProfile.scss
+++ b/src/styles/Components/UserProfile/_userProfile.scss
@@ -14,7 +14,7 @@
         align-items: center;
         justify-content:space-around ;
         padding: 10px;
-        background: white;
+        background: gray;
         border-radius: 20px;
         overflow: hidden;
         
@@ -25,9 +25,18 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg, #ff0000, #0000ff);
+            background: linear-gradient(
+                90deg, 
+            var(--button-color-start), 
+            var(--button-color-stop)
+            );
             filter: blur(15px);
             z-index: -1;
+            transition: 
+            scale .4s,
+            --button-color-start .4s,
+            --button-color-stop .4s;
+
         }
 
         span {
