--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -415,7 +415,7 @@ aside > svg:hover {
   align-items: center;
   justify-content: space-around;
   padding: 10px;
-  background: white;
+  background: gray;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -426,9 +426,10 @@ aside > svg:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #ff0000, #0000ff);
+  background: linear-gradient(90deg, var(--button-color-start), var(--button-color-stop));
   filter: blur(15px);
   z-index: -1;
+  transition: scale 0.4s, --button-color-start 0.4s, --button-color-stop 0.4s;
 }
 .profile-container .user-shower span {
   width: 90px;
