--- a/src/styles/Components/UserProfile/_userProfile.scss
+++ b/src/styles/Components/UserProfile/_userProfile.scss
@@ -14,30 +14,20 @@
         align-items: center;
         justify-content:space-around ;
         padding: 10px;
-        background: gray;
-        border-radius: 20px;
-        overflow: hidden;
-        
-        &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
+        background: linear-gradient(
                 90deg, 
             var(--button-color-start), 
             var(--button-color-stop)
-            );
-            filter: blur(15px);
-            z-index: -1;
+            ); 
+            z-index:    1;
             transition: 
             scale .4s,
             --button-color-start .4s,
             --button-color-stop .4s;
-
-        }
+        border-radius: 20px;
+        overflow: hidden;
+        border: black 2px solid;
+        
 
         span {
             width: 90px;
@@ -104,7 +94,7 @@
 
         & ~ .user-menu {
             opacity: 1;
-            z-index: 1;
+            z-index: 0;
             transform: translateY(40px);
             position: absolute;
         }
