update  setup.py

--- a/src/styles/Components/UserProfile/_userProfile.scss
+++ b/src/styles/Components/UserProfile/_userProfile.scss
@@ -5,6 +5,7 @@
     position: relative;
 
     .user-shower {
+        cursor: pointer;
         z-index: 2;
         position: relative;
         height: 100%;
