--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,7 @@
   syntax: "<color>";
   inherits: true;
   initial-value: orange;
-} 
+}
 @property --button-color-stop {
   syntax: "<color>";
   inherits: true;
@@ -406,6 +406,7 @@ aside > svg:hover {
   position: relative;
 }
 .profile-container .user-shower {
+  cursor: pointer;
   z-index: 2;
   position: relative;
   height: 100%;
